Change pre to pre-line

--- a/popup.html
+++ b/popup.html
@@ -2,13 +2,14 @@
 </head>
 <body>
 	<center>
+		<img src="logo.png">
 		<h2>ScratchFormat 2.0</h2>
-		Thank you for using ScratchFormat. To use it, go <br>
-		on a scratch comment editor and click on it. The formatter<br>
-		will automatically show up, and move to different comment boxes<br>
-		when you click on them.
-
-		<br>
+		<p>
+			Thank you for using ScratchFormat. <b>To use it, go
+			on a scratch comment editor and click on it.</b> The formatter
+			will automatically show up, and move to different comment boxes
+			when you click on them.
+		</p>
 		<p>
 			Made by <a href="https://scratch.mit.edu/users/pufflegamerz" target="_newtab">@pufflegamerz</a>.
 			<br>
@@ -17,9 +18,9 @@
 	</center>
 </body>
 <style>
-	body {
-		width: 500px;
-		height: 200px;
+	html {
+		width: 200px;
+		height: 350px;
 		background-color: lightblue;
 	}
 </style>
