Mainance and 2.2 prep update

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<html>
 <head>
 </head>
 <body>
 	<center>
-		<img src="logo.png">
-		<h2>ScratchFormat 2.1</h2>
+		<img src="logo.png" width="200">
+		<h2>ScratchFormat 2.2</h2>
 		<p>
 			Thank you for using ScratchFormat. <b>To use it, go
 			on a scratch comment editor and click on it.</b> The formatter
@@ -20,9 +21,9 @@
 </body>
 <style>
 	html {
-		width: 200px;
-		height: 350px;
+
 		background-color: lightblue;
 	}
 </style>
 <script type="text/javascript" src="javascript.js"></script>
+</html>
