Update a few things, hopefully for release 2.3

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div class="dash">
-    <b>ScratchFormat 2.2</b>
+    <b>ScratchFormat</b>
     <a href="https://scratchformat.github.io/" target="_newtab">Website</a>
     <div class="dropdown" style="">
 
@@ -32,7 +32,7 @@
     		when you click on them.
     	</p>
     	<p>
-    		ScratchFormat Copyright 2017-2020, by the Scratchformat Contributors.
+    		ScratchFormat Copyleft 2017-, by the Scratchformat Contributors.
     		<br>
     		This is open-source. See <a href="https://github.com/ScratchFormat/" target="_newtab">Our Github</a>.
     	</p>
@@ -42,8 +42,6 @@
 <style>
 html, body {
     background-color: lightblue;
-    width: 700px;
-    height: 200px;
 }
 
 /*Dash*/
