--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div class="dash">
-    <b>ScratchFormat</b>
+    <b>ScratchFormat 2.5</b>
     <a href="https://scratchformat.github.io/" target="_newtab">Website</a>
     <div class="dropdown" style="">
 
