--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
 <body>
 <div class="dash">
     <b>ScratchFormat 2.5</b>
-    <a href="https://scratchformat.github.io/" target="_newtab">Website</a>
+    <a href="https://tools.scratchstatus.org" target="_newtab">ScratchTools</a>
     <div class="dropdown" style="">
 
     <button class="dropbtn">Links</button>
@@ -26,10 +26,7 @@
 	<img src="logo.png" width="200">
 	<div style="width: 80%; margin-bottom: 20px;">
         <p>
-    		Thank you for using ScratchFormat. <b>To use it, go
-    		on a scratch comment editor and click on it.</b> The formatter
-    		will automatically show up, and move to different comment boxes
-    		when you click on them.
+		ScratchFormat is no longer being maintained. <b>We are switching to ScratchTools.</b> You can download the ScratchTools extension <a href="https://tools.scratchstatus.org/" target="_newtab">here</a>, check it out!
     	</p>
     	<p>
     		ScratchFormat Copyleft 2017-, by the Scratchformat Contributors.
