--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 <div class="dash">
-    <b>ScratchFormat 2.5</b>
+    <b>ScratchFormat 2.6</b>
     <a href="https://tools.scratchstatus.org" target="_newtab">ScratchTools</a>
-    <div class="dropdown" style="">
+    <div class="dropdown">
 
     <button class="dropbtn">Links</button>
     <div class="dropdown-content" style="left: 0;">
@@ -23,6 +23,7 @@
 </div>
 </div>
 <center>
+	<h2><a href="https://tools.scratchstatus.org/scratchformat" style="text-decoration: underline; color: black;" target="_newtab">Important Announcement</a></h2>
 	<img src="logo.png" width="200">
 	<div style="width: 80%; margin-bottom: 20px;">
         <p>
